# classify_app

./: .env.example  .gitignore  docker-compose.yml  pyproject.toml  requirements.txt
app/: config.py  main.py
app/database/: db_operations.py
app/models/: clasterisation.pkl  logistic_regression.pkl  naive_bayes.pkl  random_forest.pkl  svc.pkl  vectorizer.pkl
app/pages/admin/: admin_dashboard.py  admin_login.py  admin_register.py
app/pages/analyst/: analyst_dashboard.py  analyst_login.py  analyst_register.py
app/pages/client/: client_dashboard.py  client_login.py  client_register.py
app/pages/emploee/: emploee_dashboard.py  emploee_login.py  emploee_register.py
app/pages/user/: home_page.py
app/utils/: __init__.py  auth_utils.py  file_utils.py  ml_utils.py
docker/: dockerfile
